# robutler_psr_2022

./: .gitignore  README.md  frames.gv  goal_pub.py  location.txt  requierements.txt
moveo_control/launch/: moveo_control.launch
moveo_moveit_config/config/: gazebo_turtlebot3_waffle_pi.urdf  moveo_urdf.srdf  stomp_planning.yaml
moveo_moveit_config/launch/: demo.launch  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
moveo_urdf/urdf/: moveo_urdf.urdf
psr_apartment_description/src/: spawn_object.py
robutler_bringup/config/: visualization.rviz
robutler_camera/: CMakeLists.txt  package.xml
robutler_description/: package.xml
robutler_interface/: camera_publisher.py  goal_pub.py  gui_interface.py  locations.py  main_prog.py  mainprog.py  speech_iteraction.py  vel_pub.py
robutler_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robutler_navigation/: CMakeLists.txt  package.xml
robutler_navigation/launch/: amcl.launch  localization.launch  map_provider.launch  mapping.launch  move_base.launch  navigation.launch  robutler_navigation.launch
robutler_navigation/maps/: psr_apartment.pgm  psr_apartment.yaml
robutler_navigation/param/: costmap_common_params.yaml  local_costmap_params.yaml
robutler_navigation/params/: acml.yaml  base_local_costmap.yaml  base_local_planner.yaml  base_local_planner_func.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
(+31 files in other folders)
