<?xml version="1.0"?>
<package>
  <name>robutler_navigation</name>
  <version>0.0.1</version>
  <description>robutler navigation launch files</description>

  <author>Miguel Tavares</author>
  <maintainer email="matavares@ua.pt">Miguel Tavares</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>master_discovery_fkie</run_depend>
  <run_depend>master_sync_fkie</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
</package>